# trevi

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/bench/: CMakeLists.txt  gilbertelliot.h  main.cc
examples/rx/: CMakeLists.txt  Timer.cpp  main.cc  udpreceiver.cc  udpreceiver.h  udptransmitter.h  udputils.cc
examples/tx/: CMakeLists.txt  Timer.h  main.cc  udpreceiver.cc  udptransmitter.cc  udputils.h
include/: trevi.h
lib/: CMakeLists.txt
lib/include/: block.h  codeblock.h  datablock.h  decodeoutput.h  decoder.h  encoder.h  gf256.h  ogesolver.h  profiler.h  reorderingbuffer.h  sourceblock.h  streamdecoder.h  streamencoder.h  trevi.h  utils.h  xor.h
lib/src/: codeblock.cc  crc16.c  datablock.cc  decoder.cc  encoder.cc  main.cc  ogesolver.cc  profiler.cc  reorderingbuffer.cc  sourceblock.cc  streamdecoder.cc  streamencoder.cc  trevi.cc  utils.cc  xor.cc
src/: main.cc
